developed footer and about

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
+    <!-- Google fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wdth,wght@75..125,300..700&display=swap" rel="stylesheet">
+
     <!-- css stylesheet -->
     <link rel="stylesheet" href="./styles.css">
 
@@ -21,7 +26,7 @@
         <div id="bars"><i class="fa-solid fa-bars"></i></div>
     </div>
     <section id="home">
-        <h1 id="desc">
+        <p id="desc">
             Our passion for delicious food.
         </div>
     </section>
@@ -35,24 +40,24 @@
         </div>
         <div id="aboutBottomContainer">
             <div class="box">
-                <h2 class="number">01</h2>
-                <h3 class="heading">High Quality</h3>
+                <p class="number">01</p>
+                <p class="heading">High Quality</p>
                 <p class="details">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lectus eget nunc ullamcorper egestas vitae id enim.
                 </p>
                 <button type="button" class="btn">More</button>
             </div>
             <div class="box">
-                <h2 class="number">02</h2>
-                <h3 class="heading">Best Recipes</h3>
+                <p class="number">02</p>
+                <p class="heading">Best Recipes</p>
                 <p class="details">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lectus eget nunc ullamcorper egestas vitae id enim.
                 </p>
                 <button type="button" class="btn">More</button>
             </div>
             <div class="box">
-                <h2 class="number">03</h2>
-                <h3 class="heading">Real Taste</h3>
+                <p class="number">03</p>
+                <p class="heading">Real Taste</p>
                 <p class="details">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lectus eget nunc ullamcorper egestas vitae id enim.
                 </p>
@@ -63,25 +68,25 @@
 
     <!---------------- Catering ---------------->
     <section id="catering">
-        <h2 id="catering_heading">Catering</h2>
-        <p id="catering_text">Please call atleast 24 hours in advance for catering orders.</p>
+        <p id="cateringHeading">Catering</h2>
+        <p id="cateringText">Please call atleast 24 hours in advance for catering orders.</p>
         <div id="cateringContainer">
             <div class="cateringBox"  id="cateringBox-1">
                 <div id="cateringImg1" class="catering-item"></div>
-                <p class="cateringItemText">Item</p>
+                <p class="cateringItemText">Fresh Salads</p>
                 
             </div>
             <div class="cateringBox"  id="cateringBox-2">
                 <div id="cateringImg2" class="catering-item"></div>
-                <p class="cateringItemText">Item</p>
+                <p class="cateringItemText">Party Platters</p>
             </div>
             <div class="cateringBox"  id="cateringBox-3">
                 <div id="cateringImg3" class="catering-item"></div>
-                <p class="cateringItemText">Item</p>
+                <p class="cateringItemText">Sea food</p>
             </div>
             <div class="cateringBox"  id="cateringBox-4">
                 <div id="cateringImg4" class="catering-item"></div>
-                <p class="cateringItemText">Item</p>
+                <p class="cateringItemText">Vegan Dessert</p>
             </div>
         </div>
     </section>
@@ -113,7 +118,7 @@
 
     <!-------------- services bannner ----------->
      <section id="services">
-        <h1 id="servicesHeading">Excellent services & good prices.</h1>
+        <p id="servicesHeading">Excellent services & good prices.</h1>
      </section>
 
      <!-------------- team section --------------->
@@ -126,26 +131,68 @@
         <div id="teamBottomContainer">
             <div class="team-box">
                 <div id="teamImg1" class="team-img"></div>
-                <h4 class="team-name">name</h4>
+                <p class="team-name">Harry Potter</p>
                 <p class="team-profession">Associate</p>
             </div>
             <div class="team-box">
-                <div id="teamImg1" class="team-img"></div>
-                <h4 class="team-name">name</h4>
+                <div id="teamImg2" class="team-img"></div>
+                <p class="team-name">Ron Weasly</p>
                 <p class="team-profession">Manager</p>
             </div>
             <div class="team-box">
-                <div id="teamImg1" class="team-img"></div>
-                <h4 class="team-name">name</h4>
+                <div id="teamImg3" class="team-img"></div>
+                <p class="team-name">Albus Dumbledore</p>
                 <p class="team-profession">CEO</p>
             </div>
             <div class="team-box">
-                <div id="teamImg1" class="team-img"></div>
-                <h4 class="team-name">name</h4>
+                <div id="teamImg4" class="team-img"></div>
+                <p class="team-name">Hermione Granger</p>
                 <p class="team-profession">Co-host</p>
             </div>
         </div>
      </section>
+
+     <!-------------- Contact section ------------->
+     <section id="contact">
+        <div id="contactLeftSide">
+            <div>
+            <p id="locationHeading">Location</p>
+            <p id="location">B-23, Sector-1, Noida, Gautam Buddh Nagar, Uttar Pradesh, India</p>
+            </div>
+            <div id="links">
+                <p id="contactText">Follow us</p>
+                <div id="linksContainer">
+                    <span class="icon">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </span>
+                    <span class="icon">
+                        <i class="fa-brands fa-twitter"></i>
+                    </span>
+                    <span class="icon">
+                        <i class="fa-brands fa-instagram"></i>
+                    </span>
+                    <span class="icon">
+                        <i class="fa-brands fa-google"></i>
+                    </span>
+                </div>
+                <p id="copyright">&copy;2018 privacy policy</p>
+            </div>
+        </div>
+        <div id="contactRightSide">
+            <p id="formHeading">Contact Form</p>
+            <form>
+                <input class="input" type="text" placeholder="Enter your name" required>
+                <input class="input" type="text" placeholder="enter a valid email address" required>
+                <textarea id="textArea" placeholder="Write a message" required></textarea>
+                <button type="submit" id="submitBtn">Submit</button>
+            </form>
+        </div>
+     </section>
+
+     <!------------ footer ------------->
+     <footer id="footer">
+        <p id="footerText">This <em>website template</em> is made by <span id="devName">Pragya Saxena.</span></p>
+     </footer>
 
     <script src="./script.js"></script>
 </body>
